--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -84,10 +84,11 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.27.0",
-    "@floating-ui/react": "^0.27.7",
+    "@floating-ui/react": "https://pkg.pr.new/@floating-ui/react@3297",
     "@floating-ui/utils": "^0.2.9",
     "@react-aria/overlays": "^3.26.1",
     "prop-types": "^15.8.1",
+    "tabbable": "^6.2.0",
     "use-sync-external-store": "^1.5.0"
   },
   "devDependencies": {
